# datadog-proof

./: .gitignore  .mcp.json  README.md
.serena/: project.yml
bicep/: 1a-TODO.md  CLAUDE.md
csharp/: .gitignore  1a-TODO-CSHARP.md  1a-TODO.md  CLAUDE.md  README.md
csharp-lambda/: .gitignore  1a-TODO-CSHARP-LAMBDA.md  1a-TODO-CSHARP.md  CLAUDE.md  README.md
curl/: 1-TODO.md  CLAUDE.md
python/fastapi0dot116__cpython3dot9dot6/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
python/fastapi0dot116__cpython3dot9dot6/app/: config.py  models.py
python/fastapi0dot116__cpython3dot9dot6/tests/: conftest.py  test_config.py  test_main.py  test_models.py  test_openai_service.py
python/langchain0dot2dot11__cpython3dot9dot6/: .env.example  .gitignore  README.md  main.py  pyproject.toml
python/langchain0dot2dot11__cpython3dot9dot6/app/api/: chat.py
python/langchain0dot2dot11__cpython3dot9dot6/app/core/: agent.py  config.py
python/langchain0dot2dot11__cpython3dot9dot6/app/models/: schemas.py
python/langchain0dot2dot11__cpython3dot9dot6/app/tools/: __init__.py  datadog.py  search.py
python/langchain0dot2dot11__cpython3dot9dot6/tests/: test_agent.py  test_api.py  test_tools.py
python/langgraph0dot6dot5__cpython3dot9dot6/: .gitignore  README.md  main.py  pyproject.toml
python/langgraph0dot6dot5__cpython3dot9dot6/app/api/: chat.py
python/langgraph0dot6dot5__cpython3dot9dot6/app/core/: config.py  graph.py
python/langgraph0dot6dot5__cpython3dot9dot6/app/models/: schemas.py
python/langgraph0dot6dot5__cpython3dot9dot6/app/tools/: __init__.py  datadog.py  search.py
python/langgraph0dot6dot5__cpython3dot9dot6/tests/: test_api.py
(+454 files in other folders)
